...
                            <constraint firstItem="Mo9-Vc-GK8" firstAttribute="centerX" secondItem="BJb-a9-h7h" secondAttribute="centerX" id="Xb1-Ds-GPS"/>
                            <constraint firstItem="1Bp-B6-NSN" firstAttribute="trailing" secondItem="Mo9-Vc-GK8" secondAttribute="trailing" constant="20" id="eDW-vi-dAL"/>
                            <constraint firstItem="Mo9-Vc-GK8" firstAttribute="leading" secondItem="1Bp-B6-NSN" secondAttribute="leading" constant="20" id="qF3-WA-wvi"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="1Bp-B6-NSN"/>
                    </view>
                    <navigationItem key="navigationItem" title="Home" id="cii-Eg-aYs">
                        <barButtonItem key="leftBarButtonItem" title="Menu" image="menu" id="dk2-yf-p9c">
                            <connections>
                                <segue destination="I1p-eM-MrX" kind="presentation" id="ZBq-ga-mTW"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Add" image="plus" id="0eV-a4-MqC" userLabel="Add Tree">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="add tree"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <segue destination="3fr-83-nON" kind="presentation" id="Gyh-Sj-jD4"/>
                            </connections>
...
            </objects>
            <point key="canvasLocation" x="-570" y="3814"/>
        </scene>
        <!--Log In-->
        <scene sceneID="loc-xu-Izf">
            <objects>
                <viewController storyboardIdentifier="loginSignupScreen" title="Log In" id="ngw-bB-mhO" customClass="LoginSignupViewController" customModule="TreeSapIOS" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Hah-bB-kdT">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dUU-NZ-Wd9" customClass="KeyboardAvoidingView" customModule="KeyboardAvoidingView">
                                <rect key="frame" x="0.0" y="56" width="414" height="660"/>
...
