...
    static let unmatchingPasswordsTitle = "Passwords do not match"
    static let unmatchingPasswordsMessage = "Please ensure that you entered the same password in both password fields."

    static let passwordResetSentTitle = "Password reset email sent"
    static let passwordResetSentMessage = "A password reset email was successfully sent. Please check your inbox."

    static let loginRequiredTitle = "Login required"
    static let loginRequiredMessage = "You must log into your TreeSap account to use this feature."
    static let loginRequiredLogInAction = "Log in"

    static let submitTreeSuccessTitle = "Success!"
    static let submitTreeSuccessMessage = "Your tree has been submitted for approval. While you wait, your tree will be available in the \"My Pending Trees\" data set on your device."

...
